--- a/style.css
+++ b/style.css
@@ -1,1 +1,96 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins';
+}
 
+.container{
+    min-height: 100vh;
+    width: 100%;
+    background-color: #191a2b;
+}
+
+.service-wrapper{
+    padding: 5% 8%;
+}
+.services{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1{
+    color: #fff;
+    font-size: 2.5rem;
+    -webkit-text-stroke-color: transparent;
+    -webkit-text-stroke-width: 2px;
+    letter-spacing: 4px;
+    background-color: rgb(4, 52, 83);
+    background: linear-gradient(8deg, rgba(8, 52, 83, 1) 0%,rgba(0, 230, 173, 1) 41%, rgba(41, 17, 45, 1) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;   
+}
+
+
+.cards{
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 30px;
+    margin-top: 80px;
+
+}
+
+.card{
+    height: 330px;
+    width: 370px;
+    background-color: #1c2335;
+    padding: 3%, 8%;
+    border: .02px solid rgba(114, 226, 174, 0.2);
+    border-radius: 8px;
+    transition: 0.6s;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    overflow: hidden;
+}
+
+.card:hover{
+    transform: translateY(-25px);
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+    border: 1px solid #72e2ae;
+}
+.card i {
+    color: #72e2ae;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-size: 4.8rem;
+}
+
+.card h2{
+    color: #fff;
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin-bottom: 8px;
+}
+
+.card p{
+    text-align: center;
+    width: 100%;
+    margin: 12px, 0;
+    color: rgba(225, 225, 225, 0.6);
+}
+
+.card:hover i{
+    color: #00ff37;
+}
+
+@media screen and (max-width: 1200px){
+    .cards{
+        grid-template-columns: repeat(2,1fr);
+    }
+    
+}
